[package]
name = "atc-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7" }
askama = { version = "0.12", default-features = false }
askama_axum = { version = "0.4" }
tokio = { version = "1.42", features = ["rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing-subscriber = "0.3"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
csv = { version = "1.3" }
itertools = { version = "0.13" }
strsim = "0.11"
regex = "1.11"
moka = { version = "0.12", features = ["future"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
